# dmpbbo

./: .clang-format  .gitignore  .gitignore~  .todo.txt  .travis.yml  ACKNOWLEDGEMENTS.txt  CMakeLists.txt  CMakeLists.txt~  INSTALL.md  INSTALL.txt  LICENSE.txt  Makefile  README.md  THANKS.txt  deprecated.txt  install_dependencies.sh  setup.cfg  structure.txt
demo_robot/: .gitignore  CMakeLists.txt  README.md  TaskThrowBall.py  plotRollout.py  robotPerformRollout.cpp  step1A_trainDmpFromTrajectoryFile.cpp  step1B_trainDmpFromTrajectoryFilePlot.py  step2_defineTask.py  step3A_tuneExploration.py  step3B_performExplorationRollouts.bash  step3C_tuneExplorationPlot.py  step4A_oneOptimizationUpdate.py  step4B_performRollouts.bash  step4C_plotOptimization.py  train_and_optimize.bash
demo_robot_json/: .gitignore  CMakeLists.txt  demo_robot_json.bash  performRollouts.py  plotRollout.py  robotExecuteDmp.cpp  robotExecuteTrajectory.cpp  runSimulationThrowBall.cpp  runSimulationThrowBall.hpp  step1_trainDmpFromTrajectoryFile.py  step3_tuneExploration.py  step4_prepareOptimization.py  step5_oneOptimizationUpdate.py
demos/compare/: CMakeLists.txt  compareDmp.cpp  compareDmp.py  compareDynamicalSystems.cpp  compareDynamicalSystems.py  compareFunctionApproximators.cpp  compareFunctionApproximators.py  compare_dmp.py  compare_dynamical_systems.py  compare_function_approximators.py
demos/cpp/: CMakeLists.txt  demoDmp.cpp  demoDmpFull.cpp  demoDynamicalSystems.cpp  demoFunctionApproximators.cpp
demos/dmp/: .gitignore  CMakeLists.txt  demoDmp.cpp  demoDmp.py  demoDmpChangeGoal.cpp  demoDmpChangeGoal.py  demoDmpChangeGoalWrapper.py  demoDmpContextual.py  demoDmpContextualGoal.cpp  demoDmpContextualGoal.py  demoDmpContextualGoalWrapper.py  demoDmpContextualWrapper.py  demoDmpExtendedDimensions.cpp  demoDmpExtendedDimensions.py  demoDmpExtendedDimensionsWrapper.py  demoDmpPython.py  demoDmpTrainFromTrajectoryFile.cpp  demoDmpTrainFromTrajectoryFile.py  demoDmpTrainFromTrajectoryFileWrapper.py  demoDmpWithGainSchedules.cpp  demoDmpWithGainSchedulesWrapper.py  demoDmpWrapper.py  demos.md  trajectory.txt
demos/dmp_bbo/: .gitignore  CMakeLists.txt  demoOptimizationDmp.cpp  demoOptimizationDmp.py  demoOptimizationDmpArm2D.cpp  demoOptimizationDmpArm2DWrapper.py  demoOptimizationDmpParallel.cpp  demoOptimizationDmpParallel.py  demoOptimizationDmpParallelWrapper.py  demoOptimizationDmpWrapper.py  demoOptimizationTask.py  demoOptimizationTaskWrapper.py  demos.md
demos/dmp_bbo_robot/: .gitignore  CMakeLists.txt  README.md  TaskThrowBall.py  demo_one_update.py  demo_optimization_one_by_one.bash  demo_optimization_one_by_one.py  demo_optimization_task.py  demo_perform_rollouts.py  executeDmp.cpp  performDmpRollouts.cpp  plotRollout.py  robotExecuteDmp.cpp  robotPerformRollout.cpp  robotPerformRollouts.bash  run.bash  step1A_trainDmpFromTrajectoryFile.cpp  step1B_trainDmpFromTrajectoryFilePlot.py  step2_defineTask.py  step3A_tuneExploration.py  step3C_tuneExplorationPlot.py  step4A_oneOptimizationUpdate.py  step4B_performRollouts.bash  step4C_plotOptimization.py  todo.txt  trainDmpFromTrajectoryFile.cpp  trainDmpFromTrajectoryFilePlot.py  trajectory.txt  tuneExploration.py
demos/dynamicalsystems/: .gitignore  CMakeLists.txt  demoDynamicalSystems.cpp  demoDynamicalSystems.py  demoDynamicalSystemsPython.py  demoDynamicalSystemsWrapper.py  demoExponentialSystem.cpp  demoExponentialSystem.py  demoExponentialSystemWrapper.py  demos.md
demos/functionapproximators/: .gitignore  CMakeLists.txt  demoBasisFunctionsPython.py  demoFunctionApproximatorTraining.cpp  demoFunctionApproximatorTraining.py  demoFunctionApproximatorTrainingWrapper.py  demoLWRTraining.cpp  demoLWRTraining.py  demoLeastSquares.cpp  demoLeastSquares.py  demoLeastSquaresPython.py  demoLeastSquaresWrapper.py  demoTrainFunctionApproximators.py  demoTrainFunctionApproximatorsPython.py  demoTrainingCompareCppPython.cpp  demoTrainingCompareCppPython.py  demos.md  testFunctionApproximatorTraining.cpp  testFunctionApproximatorTraining.py
demos/robot/: .gitignore  CMakeLists.txt  README.md  TaskThrowBall.py  demo_robot.bash  demo_robot_with_trajectories.bash  performRollouts.py  perform_rollout.py  perform_rollouts.py  plotRollout.py  plot_optimization.py  plot_rollout.py  plot_rollouts.py  robotExecuteDmp.cpp  robotExecuteTrajectory.cpp  runSimulationThrowBall.cpp  runSimulationThrowBall.hpp  step1_trainDmpFromTrajectoryFile.py  step1_train_dmp_from_trajectory_file.py  step2_defineTask.py  step2_define_task.py  step3_tuneExploration.py  step3_tune_exploration.py  step4_prepareOptimization.py  step4_prepare_optimization.py  step5_oneOptimizationUpdate.py  step5_oneOptimization_update.py  step5_one_optimization_update.py  step6_plotOptimization.py  step6_plot_optimization.py
demos_cpp/dmp_bbo/: .gitignore  CMakeLists.txt  README.md  demoImitationAndOptimization.cpp  demoOptimizationDmp.cpp  demoOptimizationDmpArm2D.cpp  demoOptimizationDmpArm2DWrapper.py  demoOptimizationDmpParallel.cpp  demoOptimizationDmpParallelWrapper.py  demoOptimizationDmpWrapper.py
demos_cpp/dynamicalsystems/: CMakeLists.txt  README.md  demoDynamicalSystems.cpp  demoExponentialSystem.cpp
demos_cpp/functionapproximators/: .gitignore  CMakeLists.txt  demoFunctionApproximatorTraining.cpp  demoFunctionApproximatorTrainingWrapper.py  demoLeastSquares.cpp
python/: CMakeLists.txt  DmpBboJSONEncoder.py  README.md  boostpython_eigen_conversion.cpp  boostpython_eigen_conversion.h  dmpbbo.py  main-python.cpp  pydmpbbo.cpp  pydmpbbo.h  test.cpp  test.py  to_jsonpickle.py
python/bbo/: CostFunction.py  DistributionGaussian.py  LearningSession.py  __init__.py  bbo_plotting.py  cost_function.py  distribution_gaussian.py  plot_learning_curve.py  runOptimization.py  run_optimization.py  update_summary.py  updater.py  updaters.py
python/dmp/: Dmp.py  Trajectory.py  dmp_plotting.py
python/dmp_bbo/: LearningSessionTask.py  Rollout.py  Task.py  TaskSolver.py  TaskSolverDmp.py  dmp_bbo_plotting.py  dmp_bbo_plotting_previous.py  plot_optimization_rollouts.py  rollout.py  task.py  (+5 more)
(+634 files in other folders)
