add_executable(step1A_trainDmpFromTrajectoryFile step1A_trainDmpFromTrajectoryFile.cpp)
target_link_libraries(step1A_trainDmpFromTrajectoryFile dmp functionapproximators dynamicalsystems eigen ${LWPR_LIBRARIES} ${Boost_LIBRARIES})
install(TARGETS step1A_trainDmpFromTrajectoryFile DESTINATION ${CMAKE_CURRENT_SOURCE_DIR})

add_executable(robotPerformRollout robotPerformRollout.cpp)
target_link_libraries(robotPerformRollout dmp functionapproximators dynamicalsystems eigen ${LWPR_LIBRARIES} ${Boost_LIBRARIES})
install(TARGETS robotPerformRollout DESTINATION ${CMAKE_CURRENT_SOURCE_DIR})